--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.8.9",
+    "com.agava.yandexgames": "https://github.com/forcepusher/com.agava.yandexgames.git#11.2.0",
     "com.unity.collab-proxy": "1.17.6",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.1.31",
